--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ MultivariateRandomForest.py
 test.ipynb
 ORFtest.ipynb
 core.12444
+/LunarLander/__pycache__
+/LunarLander/slurm*
+/MountainCar/__pycache__
+/MountainCar/slurm*
